@@ -7,6 +7,9 @@ The following VM parameter is required:
 -Dvbox.home=</path/to/vb/binary> <br/>
 -Dsun.boot.library.path=</path/to/vb/libvboxjxpcom.jnilib>
 
+Test Unit need to add: <br/>
+--add-opens java.base/java.lang=ALL-UNNAMED
+
 Example: <br/>
 -Dsun.boot.library.path=/Applications/VirtualBox.app/Contents/MacOS <br/>
 -Dvbox.home=/Applications/VirtualBox.app/Contents/MacOS
